--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EDTecnology</title>
+    <!-- script de google adscence -->
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4687088603336659" crossorigin="anonymous"></script> que es esto
   </head>
   <body>
     <div id="root"></div>
