--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EDTecnology</title>
     <!-- script de google adscence -->
-     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4687088603336659" crossorigin="anonymous"></script> que es esto
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4687088603336659" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
